[tool.poetry]
name = "league-tonight-bot"
version = "0.1.0"
description = "Discord bot for LoL team formation"
authors = ["Eric Chow <eric.zjp.chow@gmail.com>", "Richard Kao", "Derek Ngo"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
